service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awsdevops-service
spec:
  type: NodePort
  selector:
    app: sample-awsdevops
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
